--- a/ui_lovelace_minimalist/dashboard/views/mainviews/lab.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/lab.yaml
@@ -1,9 +1,10 @@
 title: "Lab"
 path: "lab"
+subview: true
 type: custom:grid-layout
 layout:
   grid-template-areas: |
-    "nav title status"
+    "nav status status"
     "control shares printer"
     "status-title . ."
     "rpi-has rpi-hole rpi-share"
@@ -13,8 +14,7 @@ layout:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
       grid-template-areas: |
-        "nav ."
-        "title status"
+        "nav status"
         "control shares"
         "status-title printer"
         "rpi-has rpi-hole"
@@ -25,7 +25,6 @@ layout:
     "only screen and (max-width: 768px)":
       grid-template-areas: |
         "nav"
-        "title"
         "status"
         "shares"
         "control"
@@ -39,42 +38,29 @@ layout:
         "plex"
         "health"
 cards:
-  - type: horizontal-stack
-    cards:
-      - type: custom:button-card
-        template: chip_back
-        view_layout:
-          grid-area: nav
-        variables:
-          ulm_chip_back_path: home
-      - type: custom:mod-card
-        style:
-          hui-horizontal-stack-card$: |
-            #root { 
-              justify-content: center;
-            }
-        card:
-          type: horizontal-stack
-          cards:
-            - type: custom:button-card
-              template: chip_navigate
-              label: "Pi-Hole"
-              variables:
-                ulm_chip_navigate_path: pi-hole
-                ulm_chip_navigate_icon: mdi:pi-hole
-            - type: custom:button-card
-              template: chip_navigate
-              label: "Z-Wave"
-              variables:
-                ulm_chip_navigate_path: z-wave
-                ulm_chip_navigate_icon: mdi:z-wave
-
-  - type: custom:button-card
-    template: card_title
-    name: Lab
+  - type: custom:mod-card
     view_layout:
-      grid-area: title
-
+      grid-area: nav
+    style:
+      hui-horizontal-stack-card$: |
+        #root { 
+          justify-content: center;
+        }
+    card:
+      type: horizontal-stack
+      cards:
+        - type: custom:button-card
+          template: chip_navigate
+          label: "Pi-Hole"
+          variables:
+            ulm_chip_navigate_path: pi-hole
+            ulm_chip_navigate_icon: mdi:pi-hole
+        - type: custom:button-card
+          template: chip_navigate
+          label: "Z-Wave"
+          variables:
+            ulm_chip_navigate_path: z-wave
+            ulm_chip_navigate_icon: mdi:z-wave
   #################
   # STATUS CHIPS
   #################
