--- a/ui_lovelace_minimalist/dashboard/views/mainviews/lights.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/lights.yaml
@@ -1,45 +1,29 @@
 title: "Lights"
 path: "lights"
+subview: true
 type: custom:grid-layout
 layout:
   grid-template-columns: auto
   grid-template-rows: auto
   grid-template-areas: |
-    "nav title status killswitch"
+    "status status killswitch killswitch"
     "lights-on switches-on lights-off switches-off"
   mediaquery:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
       grid-template-areas: |
-        "nav ."
-        "title killswitch"
-        "status status"
+        "status killswitch"
         "lights-on switches-on"
         "lights-off switches-off"
     # Smartphones
     "only screen and (max-width: 768px)":
       grid-template-areas: |
-        "nav ."
-        "title killswitch"
-        "status status"
+        "status killswitch"
         "lights-on lights-on"
         "switches-on switches-on"
         "lights-off lights-off"
         "switches-off switches-off"
 cards:
-  - type: "custom:button-card"
-    template: chip_back
-    view_layout:
-      grid-area: nav
-    variables:
-      ulm_chip_back_path: home
-
-  - type: "custom:button-card"
-    template: card_title
-    name: Lights
-    view_layout:
-      grid-area: title
-
   #################
   # STATUS CHIPS
   #################
