--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -40,9 +40,19 @@ cards:
         template: card_title
         label: Devices
 
-      - type: "custom:button-card"
-        template: card_light
-        entity: light.dining_room_light
+      - type: horizontal-stack
+        cards:
+          - type: "custom:button-card"
+            template: card_light
+            entity: light.guest_bedroom_light
+            variables:
+              ulm_card_light_enable_slider: true
+              ulm_card_light_enable_collapse: true
+          - type: "custom:button-card"
+            template: card_light
+            entity: switch.guest_bedroom_fan
+            variables:
+              ulm_card_light_color: blue
 
       - type: custom:decluttering-card
         template: cover
@@ -87,9 +97,11 @@ cards:
           - node_number: 9
 
       - type: custom:decluttering-card
-        template: z_wave_single_relay
+        template: z_wave_double_switch
         variables:
-          - sensor_prefix: guest_bedroom_light
+          - sensor_prefix: guest_bedroom
           - sensor_domain: light
-          - name: Light
-          - node_number: 39
+          - name: Ceiling Fan
+          - node_number: 41
+          - switch1: light
+          - switch2: switch.guest_bedroom_fan
