--- a/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
@@ -76,7 +76,7 @@ cards:
             entity: switch.under_cabinet_lights_switch_1
           - type: "custom:button-card"
             template: card_light
-            entity: switch.dinette_light_switch_1
+            entity: light.dinette_light
 
       - type: conditional
         conditions:
@@ -239,3 +239,11 @@ cards:
         variables:
           - sensor_prefix: kitchen
           - node_number: 7
+
+      - type: custom:decluttering-card
+        template: z_wave_single_relay
+        variables:
+          - sensor_prefix: dinette_light
+          - sensor_domain: light
+          - name: Light
+          - node_number: 43
