--- a/entities/groups/lights.yaml
+++ b/entities/groups/lights.yaml
@@ -27,9 +27,9 @@ all_lights:
     - light.office_light
     - light.guest_bedroom_light
     - light.dinette_light
-    - switch.kitchen_lights_switch_1
-    - switch.under_cabinet_lights_switch_1
-    - switch.kitchen_lights_2_switch_1
+    - switch.kitchen_lights
+    - switch.under_cabinet_lights
+    - switch.kitchen_lights
     - switch.pet_thirst_light
     - switch.cat_noms_indicator_light
     - switch.master_bath_shower_light
