--- a/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
@@ -61,19 +61,14 @@ cards:
         template: card_title
         label: Devices
 
+      - type: "custom:button-card"
+        template: card_light
+        entity: switch.kitchen_lights
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
             template: card_light
-            entity: switch.kitchen_lights_switch_1
-          - type: "custom:button-card"
-            template: card_light
-            entity: switch.kitchen_lights_2_switch_1
-      - type: horizontal-stack
-        cards:
-          - type: "custom:button-card"
-            template: card_light
-            entity: switch.under_cabinet_lights_switch_1
+            entity: switch.under_cabinet_lights
           - type: "custom:button-card"
             template: card_light
             entity: light.dinette_light
@@ -81,7 +76,7 @@ cards:
       - type: conditional
         conditions:
           - condition: state
-            entity: switch.kitchen_lights_switch_1
+            entity: switch.kitchen_lights
             state: "on"
         card:
           type: custom:layout-card
@@ -121,7 +116,7 @@ cards:
             entity: input_boolean.kitchen_bulbs
             state: "on"
           - condition: state
-            entity: switch.kitchen_lights_switch_1
+            entity: switch.kitchen_lights
             state: "on"
         card:
           type: vertical-stack
@@ -245,5 +240,21 @@ cards:
         variables:
           - sensor_prefix: dinette_light
           - sensor_domain: light
-          - name: Light
+          - name: Dinette Light
           - node_number: 43
+
+      - type: custom:decluttering-card
+        template: z_wave_single_relay
+        variables:
+          - sensor_prefix: dinette_light
+          - sensor_domain: light
+          - name: Kitchen Light
+          - node_number: 45
+
+      - type: custom:decluttering-card
+        template: z_wave_single_relay
+        variables:
+          - sensor_prefix: dinette_light
+          - sensor_domain: light
+          - name: Cabinet Lights
+          - node_number: 46
