--- a/automations/scenes/change_scene.yaml
+++ b/automations/scenes/change_scene.yaml
@@ -50,64 +50,82 @@ trigger:
     id: evening
 
 action:
-  choose:
-    #####
-    # Morning scene
-    #  - open covers to desired position
-    #####
-    - conditions:
-        condition: trigger
-        id: morning
-      sequence:
-        service: scene.turn_on
-        target:
-          entity_id: scene.morning
+  - choose:
+      #####
+      # Morning scene
+      #  - open covers to desired position
+      #####
+      - conditions:
+          condition: trigger
+          id: morning
+        sequence:
+          service: scene.turn_on
+          target:
+            entity_id: scene.morning
 
-    
-    #####
-    # Evening scene
-    #  - close covers to desired position
-    #####
-    - conditions:
-        condition: trigger
-        id: evening
-      sequence:
-        service: scene.turn_on
-        target:
-          entity_id: scene.evening
+      #####
+      # Evening scene
+      #  - close covers to desired position
+      #####
+      - conditions:
+          condition: trigger
+          id: evening
+        sequence:
+          service: scene.turn_on
+          target:
+            entity_id: scene.evening
 
-    # home scene
-    - conditions:
-        condition: trigger
-        id: home
-      sequence:
-        service: scene.turn_on
-        target:
-          entity_id: scene.home
+      #####
+      # Home scene
+      #  - turns on some plugs and turns off eco
+      #####
+      - conditions:
+          condition: trigger
+          id: home
+        sequence:
+          - service: input_boolean.turn_off
+            entity_id: input_boolean.on_vacation
+          - service: scene.turn_on
+            target:
+              entity_id: scene.home
 
-    # away scene
-    - conditions:
-        condition: trigger
-        id: away
-      sequence:
-        service: scene.turn_on
-        target:
-          entity_id: scene.away
+      # away scene
+      - conditions:
+          condition: trigger
+          id: away
+        sequence:
+          service: scene.turn_on
+          target:
+            entity_id: scene.away
 
-    # vacation scene
-    - conditions:
-        condition: trigger
-        id: vacation
-      sequence:
-        service: scene.turn_on
-        target:
-          entity_id: scene.vacation
+      #####
+      # Vacation scene
+      #  - turn off some plugs and set to eco
+      #####
+      - conditions:
+          condition: trigger
+          id: vacation
+        sequence:
+          service: scene.turn_on
+          target:
+            entity_id: scene.vacation
 
-    # night scene
-    - conditions:
-        condition: trigger
-        id: night
-      sequence:
-        service: scene.turn_on
-        target:
-          entity_id: scene.night
+      #####
+      # Night scene
+      #  - set AC to 71
+      #####
+      - conditions:
+          condition: trigger
+          id: night
+        sequence:
+          service: scene.turn_on
+          target:
+            entity_id: scene.night
+  
+  # reactivate vaca scene?
+  - condition: state
+    entity_id: input_boolean.on_vacation
+    state: "on"
+  - action: scene.turn_on
+    target:
+      entity_id: scene.vacation
