--- a/entities/binary_sensors/vacuum_errors.yaml
+++ b/entities/binary_sensors/vacuum_errors.yaml
@@ -7,7 +7,7 @@ platform: template
 sensors:
   strong_boi_error:
     friendly_name: "Strong Boi Problem"
-    value_template: "{{ is_state('vacuum.strongboi', 'error') }}"
+    value_template: "{{ states('vacuum.strongboi') in ['error', 'unavailable'] }}"
     unique_id: c6a6b37d-02f0-451d-9095-da10222a6a94
     device_class: problem
     icon_template: >
@@ -15,7 +15,7 @@ sensors:
 
   rolo_error:
     friendly_name: "Rolo Problem"
-    value_template: "{{ is_state('vacuum.rolo', 'error') }}"
+    value_template: "{{ states('vacuum.rolo') in ['error', 'unavailable'] }}"
     unique_id: 05d593da-c57c-4aca-82cd-af9a88dda6e0
     device_class: problem
     icon_template: >
