--- a/automations/scenes/change_scene.yaml
+++ b/automations/scenes/change_scene.yaml
@@ -126,6 +126,7 @@ action:
   - condition: state
     entity_id: input_boolean.on_vacation
     state: "on"
+  - delay: 00:00:05
   - action: scene.turn_on
     target:
       entity_id: scene.vacation
