--- a/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
@@ -208,6 +208,7 @@ cards:
     cards:
       - type: "custom:anchor-card"
         anchor_id: low-battery
+        timeout: 300
         offset: -60
 
       - type: custom:button-card
