--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -380,7 +380,7 @@ cards:
           entity_2:
             entity_id: switch.garage_opener_plug
             templates:
-              - blue_on
+              - green_on
               - red_off
           entity_3:
             entity_id: input_boolean.washing_machine_on
@@ -408,7 +408,7 @@ cards:
           entity_1:
             entity_id: switch.water_softener_plug
             templates:
-              - blue_on
+              - green_on
               - red_off
 
       #################
